# MarCore

./: .gitignore  CMakeLists.txt
MC/: CMakeLists.txt
MC/inc/: mc_guid.h  mc_hash.h  mc_log.h  mc_stack.h  mc_test_assert.h  mc_trie.h  mc_type.h
MC/src/: mc_guid.c  mc_hash.c  mc_log.c  mc_stack.c  mc_test_assert.c  mc_trie.c
MC/test/: CMakeLists.txt  mc_test_module_guid.c  mc_test_module_hash.c  mc_test_module_stack.c  mc_test_module_type.c
MC/test/inc/: mc_test.h  mc_test_assert.h  mc_test_guid.h  mc_test_hash.h  mc_test_stack.h  mc_test_type.h
MC_Test/: CMakeLists.txt
MC_Test/inc/: mc_test.h  mc_test_assert.h  mc_test_file.h  mc_test_hash.h  mc_test_stack.h  mc_test_type.h
MC_Test/src/: mc_test_module_hash.c  mc_test_module_stack.c  mc_test_module_type.c  test_main.c
MC_Test/util/: mc_test_assert.h  mc_test_file.h
inc/: mar_core_type.h
mar_core/: CMakeLists.txt
mar_core/inc/: mar_core_log.h  mar_core_type.h  mar_hash.h  mar_trie.h
mar_core/src/: mar_core_log.c  mar_hash.c  mar_trie.c
mar_core_tests/: CMakeLists.txt
mar_core_tests/inc/: mar_core_test.h  mar_core_test_assert.h  mar_core_test_file.h
mar_core_tests/src/: mar_core_type_test_module.c  test_main.c
scr/: build.ps1  clean.ps1  run.ps1  test.ps1
src/: mar_core_main.c
test/: CMakeLists.txt
test/inc/: mar_core_test.h  mar_core_test_assert.h  mar_core_test_file.h
test/src/: mar_core_type_test_module.c  test_main.c
tools/: build.ps1  clean.ps1  run.ps1  test.ps1
